# fetch_gazebo_noetic_ws

./: .gitignore  README.md  TODO_FETCH_WS.md  build_source_all.sh
src/csc7135_pkg1/: CMakeLists.txt  package.xml
src/csc7135_pkg1/include/: robot_controller.hpp  robot_sensor.hpp
src/csc7135_pkg1/launch/: pkg1_bad.launch  pkg1_good.launch
src/csc7135_pkg1/src/: fetchcontroller_node.cpp  fetchsensor_node.cpp  fetchsensorbad_node.cpp  robot_controller.cpp  robot_sensor.cpp
src/fetch_depth_layer/: CMakeLists.txt
src/fetch_gazebo/: README.md
src/fetch_gazebo/fetch_gazebo/launch/: simulation.launch
src/fetch_gazebo/fetch_gazebo/launch/include/: fetch.launch.xml  fetch_pp.launch.xml  freight.launch.xml
src/fetch_gazebo/fetch_gazebo/models/demo_cube_green/: model.config
src/fetch_gazebo/fetch_gazebo/models/demo_cube_red/: model.config
src/fetch_gazebo/fetch_gazebo/scripts/: prepare_simulated_robot.py
src/fetch_gazebo/fetch_gazebo/worlds/: simple_pick_place.sdf
src/fetch_gazebo/fetch_gazebo_demo/scripts/: demo.py
src/fetch_gazebo/fetchit_challenge/models/gearbox_bolt/: model.sdf
src/fetch_gazebo/fetchit_challenge/models/gearbox_bottom_blue/: model.sdf
src/fetch_gazebo/fetchit_challenge/models/gearbox_largegear_grey/: model.sdf
src/fetch_gazebo/fetchit_challenge/models/gearbox_smallgear/: model.sdf
src/fetch_gazebo/fetchit_challenge/models/gearbox_smallgear_grey/: model.sdf
src/fetch_gazebo/fetchit_challenge/models/gearbox_top_blue/: model.sdf
src/fetch_gazebo/fetchit_challenge/models/gearbox_top_grey/: model.sdf
src/fetch_gazebo/fetchit_challenge/rviz/: shunk_machine.rviz
src/fetch_gazebo/fetchit_challenge/urdf/: shunk_machine.urdf
src/fetch_gazebo/scripts/: prepare_simulated_robot_pick_place.py
src/fetch_gazebo_demo/launch/: tests_arm_movements.launch
src/fetch_gazebo_demo/scripts/: pick_place_demo.py  tests_arm_movements.py
src/fetch_navigation/scripts/: tilt_head.py
src/fetchit_challenge/models/fetchit_table_theconstruct/meshes/: table_theconstruct.dae
src/fetchit_challenge/models/gearbox_bolt/meshes/: screw_v1.dae
src/fetchit_challenge/models/gearbox_bolt_blue/: model.sdf
src/fetchit_challenge/models/gearbox_bolt_blue/meshes/: screw_blue.dae
src/fetchit_challenge/models/gearbox_bolt_grey/: model.sdf
src/fetchit_challenge/models/gearbox_bottom/: model.sdf
src/fetchit_challenge/models/gearbox_bottom/meshes/: gearBoxBottom_v1.dae  gearbox_bottom_simple.stl
src/fetchit_challenge/models/gearbox_bottom_blue/meshes/: gearBoxBottom_blue.dae  gearbox_bottom_simple.stl
src/fetchit_challenge/models/gearbox_bottom_grey/: model.sdf
src/fetchit_challenge/models/gearbox_bottom_grey/meshes/: gearBoxBottom_v1.dae
src/fetchit_challenge/models/gearbox_largegear/: model.sdf
src/fetchit_challenge/models/gearbox_largegear/meshes/: largeGear_v5.stl
src/fetchit_challenge/models/gearbox_largegear_blue/: model.sdf
src/fetchit_challenge/models/gearbox_largegear_grey/meshes/: largeGear_grey.dae  largeGear_v5.dae
src/fetchit_challenge/models/gearbox_smallgear_blue/: model.sdf
src/fetchit_challenge/models/gearbox_smallgear_blue/meshes/: smallGear_simple_v2.stl
src/fetchit_challenge/models/gearbox_top/: model.sdf
src/fetchit_challenge/models/shunk_machine/: model.sdf
(+23 files in other folders)
